# photosurfactant

./: .flake8  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml  python-package-conda.yml
examples/: slip-velocity.py
linear/: first_order.py  leading_order.py  parameters.py
notebooks/: first_order.py  fourier.py  leading_order.py  linearised.ipynb  parameters.py
photosurfactant/: __init__.py  first_order.py  fourier.py  functions.py  leading_order.py  parameters.py  utils.py
photosurfactant/scripts/: plot_all.sh  plot_error.py  plot_first_order.py  plot_leading_order.py  plot_spectrum.py
scripts/: plot_all.sh  plot_error.py  plot_first_order.py  plot_leading_order.py  plot_spectrum.py  plot_sweep.py
src/photosurfactant/: __init__.py  first_order.py  fourier.py  intensity_functions.py  leading_order.py  limits.py  parameters.py  utils.py
src/photosurfactant/scripts/: plot_all.sh  plot_error.py  plot_first_order.py  plot_leading_order.py
src/photosurfactant/semi_analytic/: __init__.py  first_order.py  leading_order.py  limits.py  utils.py
src/photosurfactant/utils/: arg_parser.py  func_parser.py
test/: test_first_fourier.py  test_first_order.py  test_leading_order.py
tests/: test_first_fourier.py  test_first_order.py  test_leading_order.py
tests/test_semi_analytic/: test_first_fourier.py  test_first_order.py  test_leading_order.py
