[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photosurfactant"
version = "0.1.0"
description = "Models of chromocapillary flows for photo-actuated liquid mixing and sculpting."
readme = "README.md"
authors = [
    { name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[project.scripts]
plot_error = "scripts.plot_error:plot_error"
plot_first_order = "scripts.plot_first_order:plot_first_order"
plot_leading_order = "scripts.plot_leading_order:plot_leading_order"
plot_spectrum = "scripts.plot_spectrum:plot_spectrum"
plot_sweep = "scripts.plot_sweep:plot_sweep"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cases>=3.9.1",
    "scipy-stubs>=1.16.3.0",
]
